Bug 923173 - Use NS_WARNING for unexpected name to avoid crashing. r=ehsan